--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
                     name: null,
                     phone_number: null,
                 },
-                orderLessonId: null,
+                lessonsIdsOrder: [],
+                //orderLessonId: null,
                 orderLessonSpaces: null,
             },
             //Functionality
@@ -198,7 +199,7 @@
                     const newOrder= {
                         "name": this.order.name,
                         "phoneNumber": this.order.phone_number,
-                        "lessonId": this.orderLessonId, //id of the lesson picked
+                        "lessonId": this.lessonsIdsOrder, //ids of the lessons picked
                         "numberOfSpaces": 1 //spaces occupied of the lesson
                     }
 
@@ -220,6 +221,8 @@
                             )
                         }
                     )
+
+                    //PUT route
                     alert("Thank you for submitting your order!");
 
                 },
@@ -268,12 +271,13 @@
                     console.log(this.cart.lessonId)
 
                     this.cart.forEach(i => {
-                        this.orderLessonId = i
+                        this.lessonsIdsOrder.push(i);
+                        this.orderLessonSpaces = this.orderLessonSpaces + 1;
                     })
 
-                    this.cart.forEach(i => {
+                    /* this.cart.forEach(i => {
                         this.orderLessonId = i
-                    })
+                    }) */
                 }
 
 
