Working on PUT route pt2.

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                         function(response) {
                             response.json().then(
                                 function(json) {
-                                    alert("Success: " + json.ackowledged);
-                                    console.log("Success: " + json.ackowledged);
+                                    //alert("Success: " + json.ackowledged);
+                                    //console.log("Success: " + json.ackowledged);
 
                                     //webstore.orders.push(newOrder)
                                 }
@@ -232,7 +232,7 @@
 
                     })
 
-                    const updateLesson= {
+                    /* const updateLesson= {
                         "name": this.order.name,
                         "phoneNumber": this.order.phone_number,
                         "lessonId": this.lessonsIdsOrder, //ids of the lessons picked
@@ -259,7 +259,7 @@
                                 }
                             )
                         }
-                    )
+                    ) */
 
                     //PUT route
 
