Working on PUT route pt6.

--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
                                     "availableSpaces": j.availableSpaces - 1
                             }
 
-                            console.log(j.id)
-                            console.log(j._id)
+                            console.log(i.id)
+                            console.log(i._id)
 
-                            fetch(`https://afterschoolclasses2-env.eba-upgmncnr.eu-west-2.elasticbeanstalk.com/collections/lessons/${j.id}`, {
+                            fetch(`https://afterschoolclasses2-env.eba-upgmncnr.eu-west-2.elasticbeanstalk.com/collections/lessons/${i._id}`, {
                         method: "PUT",
                         headers: {
                             "Content-Type": "application/json",
