--- a/index.html
+++ b/index.html
@@ -221,8 +221,12 @@
                     //loop here 
                     this.lessons.forEach(i => {
 
-                        this.cart.forEach(j => {
-
+                       // this.cart.forEach(j => 
+                       for (let j = 0; j < this.cart.length; j++)
+                        {
+                            console.log(i)
+                            console.log(i.id)
+                            console.log(j)
                         
 
                             if (j == i.id) {
@@ -250,7 +254,8 @@
 
 
                             }
-                        })
+                        }
+                       // )
 
                     })
 
