--- a/index.html
+++ b/index.html
@@ -60,43 +60,47 @@
 
         <div v-if="showProduct" class="float_container">
 
-            <main>
+            <div v-if="searchResults.length">
+                <main>
 
-                <!--Product display of the available lessons-->
-                <div v-for="lesson in sortedLessons, filteredList" class="float_child">
+                    <!--Product display of the available lessons-->
+                    <!-- <div v-for="lesson in sortedLessons, filteredList" class="float_child"> -->
+                    <div v-for="lesson in searchResults" class="float_child">
 
-                    <figure>
-                        <img v-bind:src="lesson.image" width="100px" height="=100px">
-                    </figure>
+                        <figure>
+                            <img v-bind:src="lesson.image" width="100px" height="=100px">
+                        </figure>
 
-                    <h1 v-text="lesson.title"></h1>
-                    <p><b>Location:</b> {{ lesson.location }}</p>
-                    <p><b>Description:</b> {{ lesson.description }}</p>
-                    <p><b>Price:</b> {{lesson.price}}</p>
+                        <h1 v-text="lesson.title"></h1>
+                        <p><b>Location:</b> {{ lesson.location }}</p>
+                        <p><b>Description:</b> {{ lesson.description }}</p>
+                        <p><b>Price:</b> {{lesson.price}}</p>
 
-                    <button v-on:click="addItemToCart(lesson)" v-if="canAddToCart(lesson)">
-                        Add to the Cart</button>
+                        <button v-on:click="addItemToCart(lesson)" v-if="canAddToCart(lesson)">
+                            Add to the Cart</button>
 
-                    <button v-else disabled>Add to the Cart</button>
+                        <button v-else disabled>Add to the Cart</button>
 
-                    <!--Conditions regarding the product availability display-->
-                    <span v-if="classesLeft(lesson) === 0">
-                        All out!</span>
+                        <!--Conditions regarding the product availability display-->
+                        <span v-if="classesLeft(lesson) === 0">
+                            All out!</span>
 
-                    <span v-else-if="classesLeft(lesson) < 4">
-                        Only {{classesLeft(lesson)}} left!</span>
+                        <span v-else-if="classesLeft(lesson) < 4">
+                            Only {{classesLeft(lesson)}} left!</span>
 
-                    <span v-else>
-                        Buy now!</span>
+                        <span v-else>
+                            Buy now!</span>
 
-                    <!--Simple rating system-->
-                    <div>
-                        <span v-for="n in lesson.rating"> ★ </span>
-                        <span v-for="n in 5 - lesson.rating"> ☆ </span>
+                        <!--Simple rating system-->
+                        <div>
+                            <span v-for="n in lesson.rating"> ★ </span>
+                            <span v-for="n in 5 - lesson.rating"> ☆ </span>
+                        </div>
+
                     </div>
+                </main>
 
-                </div>
-            </main>
+            </div>
 
         </div>
 
@@ -193,7 +197,7 @@
                             //console.log('search result', this.searchResults)
                             console.log('data', data)
                             console.log('data. results', data.results)
-                            this.searchResults = data.results;
+                            this.searchResults = data;
                             console.log('search result', this.searchResults)
                         })
                         .catch(error => console.error(error))
