--- a/index.html
+++ b/index.html
@@ -60,45 +60,6 @@
 
         <div v-if="showProduct" class="float_container">
 
-                <main>
-
-                    <!--Product display of the available lessons-->
-                    <div v-for="lesson in sortedLessons" class="float_child">
-
-                        <figure>
-                            <img v-bind:src="lesson.image" width="100px" height="=100px">
-                        </figure>
-
-                        <h1 v-text="lesson.title"></h1>
-                        <p><b>Location:</b> {{ lesson.location }}</p>
-                        <p><b>Description:</b> {{ lesson.description }}</p>
-                        <p><b>Price:</b> {{lesson.price}}</p>
-
-                        <button v-on:click="addItemToCart(lesson)" v-if="canAddToCart(lesson)">
-                            Add to the Cart</button>
-
-                        <button v-else disabled>Add to the Cart</button>
-
-                        <!--Conditions regarding the product availability display-->
-                        <span v-if="classesLeft(lesson) === 0">
-                            All out!</span>
-
-                        <span v-else-if="classesLeft(lesson) < 4">
-                            Only {{classesLeft(lesson)}} left!</span>
-
-                        <span v-else>
-                            Buy now!</span>
-
-                        <!--Simple rating system-->
-                        <div>
-                            <span v-for="n in lesson.rating"> ★ </span>
-                            <span v-for="n in 5 - lesson.rating"> ☆ </span>
-                        </div>
-
-                    </div>
-                </main>
-
-
             <div v-if="searchResults.length">
                 <main>
 
@@ -139,6 +100,47 @@
                     </div>
                 </main>
 
+            </div>
+
+
+            <div v-else>
+                <main>
+
+                    <!--Product display of the available lessons-->
+                    <div v-for="lesson in sortedLessons" class="float_child">
+
+                        <figure>
+                            <img v-bind:src="lesson.image" width="100px" height="=100px">
+                        </figure>
+
+                        <h1 v-text="lesson.title"></h1>
+                        <p><b>Location:</b> {{ lesson.location }}</p>
+                        <p><b>Description:</b> {{ lesson.description }}</p>
+                        <p><b>Price:</b> {{lesson.price}}</p>
+
+                        <button v-on:click="addItemToCart(lesson)" v-if="canAddToCart(lesson)">
+                            Add to the Cart</button>
+
+                        <button v-else disabled>Add to the Cart</button>
+
+                        <!--Conditions regarding the product availability display-->
+                        <span v-if="classesLeft(lesson) === 0">
+                            All out!</span>
+
+                        <span v-else-if="classesLeft(lesson) < 4">
+                            Only {{classesLeft(lesson)}} left!</span>
+
+                        <span v-else>
+                            Buy now!</span>
+
+                        <!--Simple rating system-->
+                        <div>
+                            <span v-for="n in lesson.rating"> ★ </span>
+                            <span v-for="n in 5 - lesson.rating"> ☆ </span>
+                        </div>
+
+                    </div>
+                </main>
             </div>
 
         </div>
