--- a/index.html
+++ b/index.html
@@ -271,28 +271,28 @@
                     )
 
                     let count = 0;
-
                     this.cart.forEach(j => {
-                        let foundLesson = this.lessons.find(i => j == i.id);
+                        this.lessons.forEach(i => {
+                            if (j === i.id) {
+                                count++;
+                            }
+                        });
+                    });
 
-                        if (foundLesson) {
-                            count += 1;
-                            const updateLesson = {
-                                availableSpaces: foundLesson.availableSpaces - count
-                            };
+                    const updateLesson = {
+                        "availableSpaces": i.availableSpaces - count
+                    };
 
-                            fetch(`https://afterschoolclasses2-env.eba-upgmncnr.eu-west-2.elasticbeanstalk.com/collections/lessons/${foundLesson._id}`, {
-                                method: "PUT",
-                                headers: {
-                                    "Content-Type": "application/json"
-                                },
-                                body: JSON.stringify(updateLesson)
-                            })
-                                .then(response => response.json())
-                                .then(json => {
-                                    console.log("Success: " + json.acknowledged);
-                                });
-                        }
+                    fetch(`https://afterschoolclasses2-env.eba-upgmncnr.eu-west-2.elasticbeanstalk.com/collections/lessons/${i._id}`, {
+                        method: "PUT",
+                        headers: {
+                            "Content-Type": "application/json",
+                        },
+                        body: JSON.stringify(updateLesson)
+                    }).then(function (response) {
+                        response.json().then(function (json) {
+                            console.log("Success: " + json.ackowledged);
+                        });
                     });
                     alert("Thank you for submitting your order!");
                 },
